[gd_scene load_steps=3 format=3 uid="uid://btm0h4t7n2owr"]

[ext_resource type="Script" path="res://lp_4_4.gd" id="1_sks0s"]
[ext_resource type="Theme" uid="uid://duan326d8yya2" path="res://big_font.tres" id="2_m5f64"]

[node name="LP_4_4" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sks0s")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 1156.0
offset_bottom = 243.0
theme = ExtResource("2_m5f64")
text = "Put in your car number"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 274.0
offset_top = 290.0
offset_right = 909.0
offset_bottom = 425.0
theme = ExtResource("2_m5f64")
text = "Is your car okay?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 478.0
offset_top = 209.0
offset_right = 691.0
offset_bottom = 289.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = 447.0
offset_right = 208.0
offset_bottom = 643.0
theme = ExtResource("2_m5f64")
text = "calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 478.0
offset_top = 454.0
offset_right = 688.0
offset_bottom = 650.0
theme = ExtResource("2_m5f64")
text = "clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 947.0
offset_top = 452.0
offset_right = 1157.0
offset_bottom = 648.0
theme = ExtResource("2_m5f64")
text = "exit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
